# bit_fiddler

./: Cargo.toml  README.md
src/: bit_fiddle_macros.rs  bitmap_trait.rs  lib.rs
src/bit_fiddle_macros/: is_set.rs  mask.rs  max_bits.rs  mod.rs  set.rs  toggle.rs  unset.rs
tests/: is_set.rs  mask.rs  max_bits.rs  set.rs  toggle.rs  unset.rs
